# iteration-orchestrator

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
orch/: __init__.py  __main__.py  checks.py  cli.py  config.py  cost.py  doctor.py  final_gates.py  finalization.py  git_ops.py  improvements.py  lifecycle.py  locks.py  merge.py  model_routing.py  parallel.py  parallel_runner.py  paths.py  planning_team.py  preflight.py  prompt_factory.py  providers.py  qa.py  recovery.py  report.py  retro.py  review.py  review_flow.py  run_loop.py  runner.py  scaffold_lint.py  scaffold_review.py  state.py  stops.py  task_execution.py  task_flow.py  tasks_schema.py  tasks_writer.py  team_mode.py  teams.py  (+3 more)
templates/: README.md  _prompt_rules.md  _review_template.md  base_contract.md  qa_iteration.md  retro_iteration.md  review_task.md  task_audit_planning_only.md  task_db_migration.md  task_docs_only.md  task_runtime_product.md  task_security_auth.md  task_test_only.md  task_tooling_orch.md  task_ui_jinja_js.md
tests/: test_agents.py  test_checks.py  test_cli.py  test_config.py  test_cost.py  test_crash_recovery.py  test_doctor.py  test_final_gates.py  test_finalization.py  test_git_ops.py  test_hooks.py  test_improvements.py  test_lifecycle.py  test_locks.py  test_merge.py  test_model_routing.py  test_parallel.py  test_parallel_execution.py  test_parallel_race.py  test_paths.py  test_planning_team.py  test_preflight.py  test_prompt_factory.py  test_providers.py  test_qa.py  test_recover_race.py  test_recovery.py  test_report.py  test_retro.py  test_review.py  test_run_loop.py  (+15 more)
(+12 files in other folders)
